Using the Guard library

--- a/src/IssueLogger/IssueLogger.Domain/Common/Resources.resx
+++ b/src/IssueLogger/IssueLogger.Domain/Common/Resources.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="PropertyNullOrBlank" xml:space="preserve">
-    <value>Property cannot be null or blank.</value>
+  <data name="ValueCannotBeNull" xml:space="preserve">
+    <value>Value cannot be null.</value>
   </data>
 </root>
