--- a/src/IssueLogger/IssueLogger.Domain/Common/Resources.resx
+++ b/src/IssueLogger/IssueLogger.Domain/Common/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ValueCannotBeEmpty" xml:space="preserve">
+    <value>Required input {0} was empty.</value>
+  </data>
   <data name="ValueCannotBeNull" xml:space="preserve">
     <value>Value cannot be null.</value>
   </data>
